required - modo de busca por CEP

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <body>
   <app-root></app-root>
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGnuNxa3C6upXIzw6XcCBeH61nmVLwAkM&libraries=places&language=pt"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGnuNxa3C6upXIzw6XcCBeH61nmVLwAkM&libraries=places&language=pt_BR"></script>
 </body>
 
 </html>
